<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGraylight"
    tools:context=".AboutActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="405dp">

        <LinearLayout
            android:background="@drawable/gradient_background"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_profile"
                android:layout_marginTop="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:src="@drawable/photo" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_name"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="20sp"/>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="400dp"
            android:layout_height="120dp"
            android:layout_marginTop="257dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/card_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/img_facebook"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:padding="10dp"
                        android:src="@drawable/facebook" />

                    <Button
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:id="@+id/btn_facebook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/follow_facebook"
                        android:textSize="12sp"
                        android:onClick="Facebook"/>
                </LinearLayout>

                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/img_twitter"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:padding="10dp"
                        android:src="@drawable/twitter" />

                    <Button
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:id="@+id/btn_twitter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/follow_twitter"
                        android:textSize="12sp"
                        android:onClick="Twitter"/>
                </LinearLayout>

                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/img_instagram"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:padding="10dp"
                        android:src="@drawable/instagram" />

                    <Button
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:id="@+id/btn_instagram"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/follow_instagram"
                        android:textSize="12sp"
                        android:onClick="Instagram"/>
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:layout_gravity="center">

        <LinearLayout
            android:orientation="horizontal"
            android:paddingLeft="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_background">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_computer_black_24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/front_end_engineer"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:paddingLeft="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:paddingLeft="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_background">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_email_black_24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:paddingLeft="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:paddingLeft="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_background">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_phone_android_black_24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:paddingLeft="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:paddingLeft="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_background">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_public_black_24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/homepage"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:paddingLeft="20dp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>